01/s01e05.txt
a)
s01e05_a.c: In function 'main':
s01e05_a.c:5:28: error: expected ';' before 'return'
    5 |     printf("Hello World\n")
      |                            ^
      |                            ;
    6 |     return EXIT_SUCCESS;
      |     ~~~~~~



b)
s01e05_b.c: In function 'main':
s01e05_b.c:5:27: error: expected ')' before ';' token
    5 |     printf("Hello World\n";
      |                           ^
      |                           )
s01e05_b.c:6:25: error: expected ';' before '}' token
    6 |     return EXIT_SUCCESS;
      |                         ^
      |                         ;
    7 | }
      | ~

Notwendige Schritte:
